--- a/Web/index.html
+++ b/Web/index.html
@@ -1,11 +1,11 @@
 <html>
-<head><title>VRChat Remote Image Loading Assets</title></head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VRChat Remote Image Loading Assets</title>
+</head>
 <body>
     <a href="captions.csv">Image Captions</a>
-    <img src="1.jpg" />
-    <img src="2.jpg" />
-    <img src="3.jpg" />
-    <img src="4.jpg" />
-    <img src="5.jpg" />
+    <script src="script.js"></script>
 </body>
 </html>
