Update html to dynamically pull images

--- a/Web/index.html
+++ b/Web/index.html
@@ -5,7 +5,7 @@
     <title>VRChat Remote Image Loading Assets</title>
 </head>
 <body>
-    <a href="captions.csv">Image Captions</a>
+    <ul id="file-list">Loading files ...</ul>
     <script src="script.js"></script>
 </body>
 </html>
