Update html to dynamically pull images

--- a/Web/index.html
+++ b/Web/index.html
@@ -1,11 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VRChat Remote Image Loading Assets</title>
+    <title>Dynamic File Listing</title>
 </head>
 <body>
-    <ul id="file-list">Loading files ...</ul>
-    <script src="script.js"></script>
+<h1>Files in the Folder</h1>
+<ul id="file-list">Loading files...</ul>
+
+<script src="script.js"></script>
 </body>
 </html>
