Update html to dynamically pull images

--- a/Web/index.html
+++ b/Web/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic File Listing</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Files in the Folder</h1>
-<ul id="file-list">Loading files...</ul>
+<h1>Files in Repository Folders</h1>
+<div id="file-list">Loading files...</div>
 
 <script src="script.js"></script>
 </body>
