--- a/Web/index.html
+++ b/Web/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic File Listing</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<html>
+<head><title>VRChat Remote Image Loading Assets</title></head>
 <body>
-<h1>Files in Repository Folders</h1>
-<div id="file-list">Loading files...</div>
-
-<script src="script.js"></script>
+<a href="captions.csv">Image Captions</a>
+<img src="1.jpg" />
+<img src="2.jpg" />
+<img src="3.jpg" />
+<img src="4.jpg" />
+<img src="5.jpg" />
+<img src="6.jpg" />
+<img src="7.jpg" />
+<img src="8.jpg" />
+<img src="9.jpg" />
+<img src="10.jpg" />
 </body>
 </html>
