--- a/Web/index.html
+++ b/Web/index.html
@@ -3,5 +3,15 @@
 <body>
 <a href="captions.csv">Image Captions</a>
 <a href="images.csv">Image Names</a>
+<img src="1.jpg" />
+<img src="2.jpg" />
+<img src="3.jpg" />
+<img src="4.jpg" />
+<img src="5.jpg" />
+<img src="6.jpg" />
+<img src="7.jpg" />
+<img src="8.jpg" />
+<img src="9.jpg" />
+<img src="10.jpg" />
 </body>
 </html>
