--- a/Web/index.html
+++ b/Web/index.html
@@ -2,7 +2,7 @@
 <head><title>VRChat Remote Image Loading Assets</title></head>
 <body>
 <a href="captions.csv">Image Captions</a>
-<a href="images.csv">Image Names</a>
+<a href="images.json">Image Names</a>
 <img src="1.jpg" />
 <img src="2.jpg" />
 <img src="3.jpg" />
